# agentaura

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ROADMAP.md  docker-compose.yml  otel-collector-config.yaml  otel-env.sh  prometheus.yml  pyproject.toml
agentaura/: cli.py
agentaura/adapters/: base.py
agentaura/adapters/claude_code/: adapter.py  mapper.py  parser.py
agentaura/adapters/codex/: adapter.py  normalizer.py  parser.py
agentaura/core/: events.py  normalized.py  pricing.py
agentaura/pipeline/: exporter.py  state.py
agentaura/watcher/: file_watcher.py
tests/: test_codex.py  test_mapper.py  test_otel_mapper.py  test_parser.py  test_pricing.py  test_rich_session.py  test_state.py
tests/fixtures/: codex_session.jsonl  rich_session.jsonl  sample_session.jsonl
tests/fixtures/rich_session/subagents/: agent-test-explore-001.jsonl  agent-test-explore-001.meta.json
tests/fixtures/rich_session/tool-results/: abc123.txt
