[project]
name = "agentaura"
version = "0.1.0"
description = "Monitoring dashboard for coding agents"
requires-python = ">=3.13"
dependencies = [
    "langfuse>=4.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "watchdog>=4.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
agentaura = "agentaura.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentaura"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
include = ["agentaura"]
exclude = ["tests", ".venv", "**/node_modules", "**/__pycache__", "**/.*"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["agentaura"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
